metaquery/search/datasetsearch_parser.go
// Code generated from /home/nthalk/local/src/iodesystems/sqlc-go-codegen-metaquery/metaquery/search/grammar/DataSetSearchParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package search // DataSetSearchParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type DataSetSearchParser struct {
	*antlr.BaseParser
}

var DataSetSearchParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func datasetsearchparserParserInit() {
	staticData := &DataSetSearchParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'\\'", "'!'", "", "", "':'", "','", "'('", "')'",
	}
	staticData.SymbolicNames = []string{
		"", "ESCAPED_CHAR", "ESCAPE", "NEGATE", "ANY", "STRING", "TARGET_SEPARATOR",
		"TERM_OR", "TERM_GROUP_START", "TERM_GROUP_END", "WS", "ESCAPED",
	}
	staticData.RuleNames = []string{
		"search", "simpleTerm", "andTerm", "orTerm", "term", "termTarget", "termValueGroup",
		"simpleValue", "termValue", "andValue", "orValue", "unprotectedOrValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// DataSetSearchParserInit initializes any static state used to implement DataSetSearchParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewDataSetSearchParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func DataSetSearchParserInit() {
	staticData := &DataSetSearchParserParserStaticData
	staticData.once.Do(datasetsearchparserParserInit)
}

// NewDataSetSearchParser produces a new parser instance for the optional input antlr.TokenStream.
func NewDataSetSearchParser(input antlr.TokenStream) *DataSetSearchParser {
	DataSetSearchParserInit()
	this := new(DataSetSearchParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &DataSetSearchParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "DataSetSearchParser.g4"

	return this
}

// DataSetSearchParser tokens.
const (
	DataSetSearchParserEOF              = antlr.TokenEOF
	DataSetSearchParserESCAPED_CHAR     = 1
	DataSetSearchParserESCAPE           = 2
	DataSetSearchParserNEGATE           = 3
	DataSetSearchParserANY              = 4
	DataSetSearchParserSTRING           = 5
	DataSetSearchParserTARGET_SEPARATOR = 6
	DataSetSearchParserTERM_OR          = 7
	DataSetSearchParserTERM_GROUP_START = 8
	DataSetSearchParserTERM_GROUP_END   = 9
	DataSetSearchParserWS               = 10
	DataSetSearchParserESCAPED          = 11
)

// DataSetSearchParser rules.
const (
	DataSetSearchParserRULE_search             = 0
	DataSetSearchParserRULE_simpleTerm         = 1
	DataSetSearchParserRULE_andTerm            = 2
	DataSetSearchParserRULE_orTerm             = 3
	DataSetSearchParserRULE_term               = 4
	DataSetSearchParserRULE_termTarget         = 5
	DataSetSearchParserRULE_termValueGroup     = 6
	DataSetSearchParserRULE_simpleValue        = 7
	DataSetSearchParserRULE_termValue          = 8
	DataSetSearchParserRULE_andValue           = 9
	DataSetSearchParserRULE_orValue            = 10
	DataSetSearchParserRULE_unprotectedOrValue = 11
)

// ISearchContext is an interface to support dynamic dispatch.
type ISearchContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	SimpleTerm() ISimpleTermContext
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode
	TERM_OR() antlr.TerminalNode
	AllAndTerm() []IAndTermContext
	AndTerm(i int) IAndTermContext
	AllOrTerm() []IOrTermContext
	OrTerm(i int) IOrTermContext

	// IsSearchContext differentiates from other interfaces.
	IsSearchContext()
}

type SearchContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySearchContext() *SearchContext {
	var p = new(SearchContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_search
	return p
}

func InitEmptySearchContext(p *SearchContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_search
}

func (*SearchContext) IsSearchContext() {}

func NewSearchContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SearchContext {
	var p = new(SearchContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DataSetSearchParserRULE_search

	return p
}

func (s *SearchContext) GetParser() antlr.Parser { return s.parser }

func (s *SearchContext) EOF() antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserEOF, 0)
}

func (s *SearchContext) SimpleTerm() ISimpleTermContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISimpleTermContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISimpleTermContext)
}

func (s *SearchContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(DataSetSearchParserWS)
}

func (s *SearchContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserWS, i)
}

func (s *SearchContext) TERM_OR() antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserTERM_OR, 0)
}

func (s *SearchContext) AllAndTerm() []IAndTermContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAndTermContext); ok {
			len++
		}
	}

	tst := make([]IAndTermContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAndTermContext); ok {
			tst[i] = t.(IAndTermContext)
			i++
		}
	}

	return tst
}

func (s *SearchContext) AndTerm(i int) IAndTermContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAndTermContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAndTermContext)
}

func (s *SearchContext) AllOrTerm() []IOrTermContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOrTermContext); ok {
			len++
		}
	}

	tst := make([]IOrTermContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOrTermContext); ok {
			tst[i] = t.(IOrTermContext)
			i++
		}
	}

	return tst
}

func (s *SearchContext) OrTerm(i int) IOrTermContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOrTermContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOrTermContext)
}

func (s *SearchContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SearchContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SearchContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.EnterSearch(s)
	}
}

func (s *SearchContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.ExitSearch(s)
	}
}

func (p *DataSetSearchParser) Search() (localctx ISearchContext) {
	localctx = NewSearchContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DataSetSearchParserRULE_search)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(32)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(24)
			p.SimpleTerm()
		}
		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
		for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			if _alt == 1 {
				p.SetState(27)
				p.GetErrorHandler().Sync(p)
				if p.HasError() {
					goto errorExit
				}

				switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
				case 1:
					{
						p.SetState(25)
						p.AndTerm()
					}

				case 2:
					{
						p.SetState(26)
						p.OrTerm()
					}

				case antlr.ATNInvalidAltNumber:
					goto errorExit
				}

			}
			p.SetState(31)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
			if p.HasError() {
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(34)
				p.Match(DataSetSearchParserWS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}
		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == DataSetSearchParserTERM_OR {
		{
			p.SetState(40)
			p.Match(DataSetSearchParserTERM_OR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == DataSetSearchParserWS {
		{
			p.SetState(43)
			p.Match(DataSetSearchParserWS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(49)
		p.Match(DataSetSearchParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISimpleTermContext is an interface to support dynamic dispatch.
type ISimpleTermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Term() ITermContext
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode

	// IsSimpleTermContext differentiates from other interfaces.
	IsSimpleTermContext()
}

type SimpleTermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimpleTermContext() *SimpleTermContext {
	var p = new(SimpleTermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_simpleTerm
	return p
}

func InitEmptySimpleTermContext(p *SimpleTermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_simpleTerm
}

func (*SimpleTermContext) IsSimpleTermContext() {}

func NewSimpleTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SimpleTermContext {
	var p = new(SimpleTermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DataSetSearchParserRULE_simpleTerm

	return p
}

func (s *SimpleTermContext) GetParser() antlr.Parser { return s.parser }

func (s *SimpleTermContext) Term() ITermContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITermContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITermContext)
}

func (s *SimpleTermContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(DataSetSearchParserWS)
}

func (s *SimpleTermContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserWS, i)
}

func (s *SimpleTermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SimpleTermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SimpleTermContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.EnterSimpleTerm(s)
	}
}

func (s *SimpleTermContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.ExitSimpleTerm(s)
	}
}

func (p *DataSetSearchParser) SimpleTerm() (localctx ISimpleTermContext) {
	localctx = NewSimpleTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DataSetSearchParserRULE_simpleTerm)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(51)
				p.Match(DataSetSearchParserWS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	{
		p.SetState(57)
		p.Term()
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(58)
				p.Match(DataSetSearchParserWS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}
		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAndTermContext is an interface to support dynamic dispatch.
type IAndTermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Term() ITermContext
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode

	// IsAndTermContext differentiates from other interfaces.
	IsAndTermContext()
}

type AndTermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAndTermContext() *AndTermContext {
	var p = new(AndTermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_andTerm
	return p
}

func InitEmptyAndTermContext(p *AndTermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_andTerm
}

func (*AndTermContext) IsAndTermContext() {}

func NewAndTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AndTermContext {
	var p = new(AndTermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DataSetSearchParserRULE_andTerm

	return p
}

func (s *AndTermContext) GetParser() antlr.Parser { return s.parser }

func (s *AndTermContext) Term() ITermContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITermContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITermContext)
}

func (s *AndTermContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(DataSetSearchParserWS)
}

func (s *AndTermContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserWS, i)
}

func (s *AndTermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AndTermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AndTermContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.EnterAndTerm(s)
	}
}

func (s *AndTermContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.ExitAndTerm(s)
	}
}

func (p *DataSetSearchParser) AndTerm() (localctx IAndTermContext) {
	localctx = NewAndTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DataSetSearchParserRULE_andTerm)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = 1
	for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1:
			{
				p.SetState(64)
				p.Match(DataSetSearchParserWS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 8, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	{
		p.SetState(69)
		p.Term()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IOrTermContext is an interface to support dynamic dispatch.
type IOrTermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TERM_OR() antlr.TerminalNode
	Term() ITermContext
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode

	// IsOrTermContext differentiates from other interfaces.
	IsOrTermContext()
}

type OrTermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOrTermContext() *OrTermContext {
	var p = new(OrTermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_orTerm
	return p
}

func InitEmptyOrTermContext(p *OrTermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_orTerm
}

func (*OrTermContext) IsOrTermContext() {}

func NewOrTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OrTermContext {
	var p = new(OrTermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DataSetSearchParserRULE_orTerm

	return p
}

func (s *OrTermContext) GetParser() antlr.Parser { return s.parser }

func (s *OrTermContext) TERM_OR() antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserTERM_OR, 0)
}

func (s *OrTermContext) Term() ITermContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITermContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITermContext)
}

func (s *OrTermContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(DataSetSearchParserWS)
}

func (s *OrTermContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserWS, i)
}

func (s *OrTermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OrTermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OrTermContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.EnterOrTerm(s)
	}
}

func (s *OrTermContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.ExitOrTerm(s)
	}
}

func (p *DataSetSearchParser) OrTerm() (localctx IOrTermContext) {
	localctx = NewOrTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DataSetSearchParserRULE_orTerm)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == DataSetSearchParserWS {
		{
			p.SetState(71)
			p.Match(DataSetSearchParserWS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(76)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(77)
		p.Match(DataSetSearchParserTERM_OR)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 10, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(78)
				p.Match(DataSetSearchParserWS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}
		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 10, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	{
		p.SetState(84)
		p.Term()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITermContext is an interface to support dynamic dispatch.
type ITermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TermValueGroup() ITermValueGroupContext
	TermTarget() ITermTargetContext
	TARGET_SEPARATOR() antlr.TerminalNode
	NEGATE() antlr.TerminalNode
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode

	// IsTermContext differentiates from other interfaces.
	IsTermContext()
}

type TermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTermContext() *TermContext {
	var p = new(TermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_term
	return p
}

func InitEmptyTermContext(p *TermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DataSetSearchParserRULE_term
}

func (*TermContext) IsTermContext() {}

func NewTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TermContext {
	var p = new(TermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DataSetSearchParserRULE_term

	return p
}

func (s *TermContext) GetParser() antlr.Parser { return s.parser }

func (s *TermContext) TermValueGroup() ITermValueGroupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITermValueGroupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITermValueGroupContext)
}

func (s *TermContext) TermTarget() ITermTargetContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITermTargetContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITermTargetContext)
}

func (s *TermContext) TARGET_SEPARATOR() antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserTARGET_SEPARATOR, 0)
}

func (s *TermContext) NEGATE() antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserNEGATE, 0)
}

func (s *TermContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(DataSetSearchParserWS)
}

func (s *TermContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(DataSetSearchParserWS, i)
}

func (s *TermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TermContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.EnterTerm(s)
	}
}

func (s *TermContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DataSetSearchParserListener); ok {
		listenerT.ExitTerm(s)
	}
}

func (p *DataSetSearchParser) Term() (localctx ITermContext) {
	localctx = NewTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, DataSetSearchParserRULE_term)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(94)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 12, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(86)
			p.TermTarget()
		}
		{
			p.SetState(87)
			p.Match(DataSetSearchParserTARGET_SEPARATOR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 11, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
		for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			if _alt == 1 {
				{
					p.SetState(88)
					p.Match(DataSetSearchParserWS)
					if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
					}
				}

			}
			p.SetState(93)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 11, p.GetParserRuleContext())
			if p.HasError() {
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	p.SetState(97)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 13, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(96)
			p.Match(DataSetSearchParserNEGATE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
